[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/tilesets/city_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://content/areas/TriggerArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/areas/City/CityBusstreetArea/CityBusStreetArea.gd" type="Script" id=3]
[ext_resource path="res://content/areas/AreaChangeTrigger.gd" type="Script" id=4]
[ext_resource path="res://assets/tilesets/collision_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://content/areas/BusTrigger.gd" type="Script" id=6]
[ext_resource path="res://content/areas/components/trafficLight.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/areas/CrossingArea.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/animated_sprites/cars/green_car.png" type="Texture" id=9]
[ext_resource path="res://assets/animated_sprites/cars/red_car.png" type="Texture" id=10]
[ext_resource path="res://content/movables/car.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/animated_sprites/cars/light_green_car.png" type="Texture" id=12]
[ext_resource path="res://assets/animated_sprites/cars/blue_car.png" type="Texture" id=13]

[node name="CityBusstreetArea" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 25, 65545, 1, 25, 65537, 2, 25, 65545, 3, 25, 65537, 4, 25, 65545, 5, 25, 65537, 6, 25, 65545, 7, 25, 65537, 8, 25, 65545, 9, 25, 65537, 10, 25, 65545, 11, 25, 65537, 65536, 25, 65545, 65537, 25, 65545, 65538, 25, 65545, 65539, 25, 65545, 65540, 25, 65545, 65541, 25, 65545, 65542, 25, 65545, 65543, 25, 65545, 65544, 25, 65545, 65545, 25, 65545, 65546, 25, 65545, 65547, 25, 65545, 131072, 25, 65537, 131073, 25, 131081, 131074, 25, 65537, 131075, 25, 131081, 131076, 25, 65537, 131077, 25, 131081, 131078, 25, 65537, 131079, 25, 131081, 131080, 25, 65537, 131081, 25, 131081, 131082, 25, 65537, 131083, 25, 131081, 196608, 25, 65545, 196609, 25, 65545, 196610, 25, 65545, 196611, 25, 65545, 196612, 25, 65545, 196613, 25, 65545, 196614, 25, 65545, 196615, 25, 65545, 196616, 25, 65545, 196617, 25, 65545, 196618, 25, 65545, 196619, 25, 65545, 262144, 25, 65545, 262145, 25, 65537, 262146, 25, 65545, 262147, 25, 2, 262148, 25, 65545, 262149, 25, 65537, 262150, 25, 65545, 262151, 25, 65537, 262152, 25, 65545, 262153, 25, 65537, 262154, 25, 65545, 262155, 25, 65537, 327680, 25, 131073, 327681, 25, 131073, 327682, 25, 65544, 327683, 25, 65545, 327684, 25, 65543, 327685, 25, 131073, 327686, 25, 131073, 327687, 25, 131073, 327688, 25, 131073, 327689, 25, 131073, 327690, 25, 131073, 327691, 25, 131073, 458751, 1, 0, 393216, 1, 1, 393217, 1, 2, 393218, 25, 131074, 393219, 25, 131075, 393220, 25, 131076, 393221, 1, 0, 393222, 1, 1, 393223, 1, 1, 393224, 1, 1, 393225, 1, 1, 393226, 1, 1, 393227, 1, 1, 393228, 1, 2, 524287, 1, 65536, 458752, 1, 65537, 458753, 1, 65538, 458754, 25, 131074, 458755, 25, 65545, 458756, 25, 131076, 458757, 1, 65536, 458758, 1, 65537, 458759, 1, 65537, 458760, 1, 65537, 458761, 1, 65537, 458762, 1, 65537, 458763, 1, 65537, 458764, 1, 65538, 589823, 1, 65536, 524288, 1, 65537, 524289, 1, 65538, 524290, 25, 131074, 524291, 25, 131075, 524292, 25, 131076, 524293, 1, 131072, 524294, 1, 131073, 524295, 1, 131073, 524296, 1, 131073, 524297, 1, 131073, 524298, 1, 131073, 524299, 1, 131073, 524300, 1, 131074, 655359, 1, 65536, 589824, 1, 65537, 589825, 1, 65538, 589826, 25, 131074, 589827, 25, 65545, 589828, 25, 131079, 589829, 25, 1, 589830, 25, 1, 589831, 25, 0, 589832, 25, 1, 589833, 25, 1, 589834, 25, 1, 589835, 25, 1, 720895, 1, 65536, 655360, 1, 65537, 655361, 1, 65538, 655362, 25, 131074, 655363, 25, 2, 655364, 25, 65545, 655365, 25, 65537, 655366, 25, 65545, 655367, 25, 65536, 655368, 25, 65545, 655369, 25, 65537, 655370, 25, 65545, 655371, 25, 65537, 786431, 1, 65536, 720896, 1, 65537, 720897, 1, 65538, 720898, 25, 131074, 720899, 25, 65545, 720900, 25, 65543, 720901, 25, 131073, 720902, 25, 131073, 720903, 25, 131072, 720904, 25, 131073, 720905, 25, 131073, 720906, 25, 131073, 720907, 25, 131073, 851967, 1, 65536, 786432, 1, 65537, 786433, 1, 65538, 786434, 25, 131074, 786435, 25, 131075, 786436, 25, 131076, 786437, 1, 0, 786438, 1, 1, 786439, 1, 1, 786440, 1, 1, 786441, 1, 1, 786442, 1, 1, 786443, 1, 1, 786444, 1, 2, 917503, 1, 65536, 851968, 1, 65537, 851969, 1, 65538, 851970, 25, 131074, 851971, 25, 65545, 851972, 25, 131076, 851973, 1, 65536, 851974, 1, 65537, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65537, 851980, 1, 65538, 983039, 1, 65536, 917504, 1, 65537, 917505, 1, 65538, 917506, 25, 131074, 917507, 25, 131075, 917508, 25, 131076, 917509, 1, 65536, 917510, 1, 65537, 917511, 1, 65537, 917512, 1, 65537, 917513, 1, 65537, 917514, 1, 65537, 917515, 1, 65537, 917516, 1, 65538, 1048575, 1, 65536, 983040, 1, 65537, 983041, 1, 65538, 983042, 25, 131074, 983043, 25, 65545, 983044, 25, 131076, 983045, 1, 65536, 983046, 1, 65537, 983047, 1, 65537, 983048, 1, 65537, 983049, 1, 65537, 983050, 1, 65537, 983051, 1, 65537, 983052, 1, 65538, 1114111, 1, 131072, 1048576, 1, 131073, 1048577, 1, 131074, 1048581, 1, 131072, 1048582, 1, 131073, 1048583, 1, 131073, 1048584, 1, 131073, 1048585, 1, 131073, 1048586, 1, 131073, 1048587, 1, 131073, 1048588, 1, 131074 )

[node name="Details" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 1 )
show_collision = true
format = 1
tile_data = PoolIntArray( 327687, 53, 0, 720902, 35, 0, 1048588, 29, 0 )

[node name="Collsion" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
show_collision = true
format = 1
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 393223, 0, 0, 524287, 0, 0, 589823, 0, 0, 524296, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 851967, 0, 0, 786438, 0, 0, 917503, 0, 0, 983039, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 1048588, 0, 0 )

[node name="LeaveBottomTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 384.697, 1056.56 )
scale = Vector2( 12, 1 )
is_activated_by_collision = true
walkable = true
collisionTriggerPath = NodePath("../LeaveBottomTrigger")

[node name="LeaveBottomTrigger" type="Node" parent="."]
script = ExtResource( 4 )

[node name="LeaveRightTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 801.653, 510.936 )
scale = Vector2( 1, 16 )
is_activated_by_collision = true
walkable = true
collisionTriggerPath = NodePath("../LeaveRightTrigger")

[node name="LeaveRightTrigger" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BusTriggerArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 479.802, 385.757 )
scale = Vector2( 1, 2 )
is_activated_by_action = true
actionTriggerPath = NodePath("../BusTrigger")

[node name="BusTrigger" type="Node" parent="."]
script = ExtResource( 6 )

[node name="trafficLight" parent="." instance=ExtResource( 7 )]
position = Vector2( 546.965, 519.974 )
is_on = true
has_crosswalk = true
crosswalk = NodePath("../CrossingArea")

[node name="CrossingArea" parent="." instance=ExtResource( 8 )]
position = Vector2( 479.861, 672.254 )
scale = Vector2( 1, 3 )
slow_down = 0.3
crosswalk = true

[node name="car2" parent="." instance=ExtResource( 11 )]
position = Vector2( -111.603, 199.336 )
path = [ [ "waiting", 1 ], [ "right", 15 ], [ "up", 5 ], [ "left", 15 ], [ "down", 5 ] ]
texture = ExtResource( 9 )

[node name="car3" parent="." instance=ExtResource( 11 )]
position = Vector2( -113.952, 83.7888 )
path = [ [ "waiting", 0 ], [ "right", 15 ], [ "up", 3 ], [ "left", 15 ], [ "down", 3 ] ]
texture = ExtResource( 10 )

[node name="car" parent="." instance=ExtResource( 11 )]
position = Vector2( 272.254, 1125.97 )
path = [ [ "waiting", 10 ], [ "up", 7 ], [ "right", 9 ], [ "down", 7 ], [ "left", 9 ], [ "waiting", 2 ], [ "up", 13 ], [ "right", 9 ], [ "down", 13 ], [ "left", 9 ] ]
texture = ExtResource( 12 )

[node name="car4" parent="." instance=ExtResource( 11 )]
position = Vector2( -116.396, 313.469 )
path = [ [ "waiting", 5 ], [ "right", 4 ], [ "down", 6 ], [ "right", 11 ], [ "down", 6 ], [ "left", 15 ], [ "up", 12 ] ]
texture = ExtResource( 13 )

[node name="CrossingArea2" parent="." instance=ExtResource( 8 )]
position = Vector2( 229.401, 672.397 )
scale = Vector2( 3, 3 )
slow_down = 0.2
